# news-linguistic-analyzer

./: .gitignore  CHANGELOG.md  LICENSE  QWEN.md  README.en.md  README.md  SKILL.md  pyproject.toml
.qwen/skills/agent-skill-yaml-spec/: SKILL.md
.qwen/skills/fact-check-output-standard/: SKILL.md
references/: batch-processing.md  domain-adaptation.md  edge-cases.md  examples.md  input-validation.md  long-text-processing.md  news-sources.md  output-format.md  quality-checklist.md
scripts/: validate-input.py
tests/: test_validate_input.py
