[project]
name = "news-linguistic-analyzer"
version = "1.8.0"
description = "英文新闻翻译与深度分析 Agent Skill"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "anthonysu" }]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
