[project]
name = "news-linguistic-analyzer"
version = "1.9.0"
description = "英文新闻翻译与深度分析 Agent Skill"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "anthonysu" }]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
